--- a/package.json
+++ b/package.json
@@ -30,12 +30,18 @@
     "@angular/router-deprecated": "2.0.0-rc.1",
     "@angular/upgrade": "2.0.0-rc.1",
     "angular2-in-memory-web-api": "0.0.7",
+    "angular2-oauth2": "^1.3.10",
+    "base64-js": "^1.1.2",
     "bootstrap": "^3.3.6",
+    "buffer": "^4.6.0",
     "es6-shim": "^0.35.0",
     "express": "^4.13.4",
+    "jquery": "^2.2.4",
+    "js-base64": "^2.1.9",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
+    "sha256": "^0.2.0",
     "systemjs": "0.19.27",
     "zone.js": "^0.6.12"
   },
