--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "^4.13.4",
     "jquery": "^2.2.4",
     "js-base64": "^2.1.9",
+    "lodash": "^4.13.1",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
@@ -46,22 +47,21 @@
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
-    "concurrently": "^2.0.0",
-    "lite-server": "^2.2.0",
-    "typescript": "^1.8.10",
-    "typings": "^0.8.1",
     "canonical-path": "0.0.2",
+    "concurrently": "^2.0.0",
     "http-server": "^0.9.0",
-    "tslint": "^3.7.4",
-    "lodash": "^4.11.1",
-    "jasmine-core": "~2.4.1",
+    "jasmine-core": "2.4.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.3",
     "karma-cli": "^0.1.2",
     "karma-htmlfile-reporter": "^0.2.2",
     "karma-jasmine": "^0.3.8",
+    "lite-server": "^2.2.0",
     "protractor": "^3.3.0",
-    "rimraf": "^2.5.2"
+    "rimraf": "^2.5.2",
+    "tslint": "^3.7.4",
+    "typescript": "^1.8.10",
+    "typings": "^0.8.1"
   },
   "repository": {}
 }
